<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dovydas.punchescounter.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/canvas">

    <Button
        android:id="@+id/btnNewFight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newFight"
        android:layout_weight="1"
        android:background="@drawable/main_buttons"
        android:layout_margin="35dp"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btnHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_weight="1"
        android:background="@drawable/main_buttons"
        android:layout_margin="35dp"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btnHowTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/howToScore"
        android:layout_weight="1"
        android:background="@drawable/main_buttons"
        android:layout_margin="35dp"
        android:textSize="20sp" />
</LinearLayout>
