<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dovydas.punchescounter.NewFightOptionsActivity"
    android:orientation="vertical"
    android:background="@drawable/canvas"
    android:weightSum="1">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="24sp"
    android:text="@string/rounds"
    android:layout_marginTop="5dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center"/>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="0.1"
    android:layout_gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
    <Button
        android:background="@drawable/left_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/minusRound"
        android:layout_gravity="center_vertical" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:id="@+id/roundCount"
        android:text="12"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />
    <Button
        android:background="@drawable/right_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/plusRound"
        android:layout_gravity="center_vertical" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/fighters"
        android:layout_marginTop="15dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:contentDescription="@string/redBoxer"
            android:id="@+id/redSquare"
            android:background="@drawable/red_square"
            android:layout_height="32dp"
            android:layout_width="32dp"
            android:layout_gravity="center_vertical" />
        <EditText
            android:hint="@string/enter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/redFighterName"
            android:textSize="32sp"
            android:inputType="textCapSentences"
            android:layout_marginLeft="7dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:contentDescription="@string/blueBoxer"
            android:id="@+id/blueSquare"
            android:background="@drawable/blue_square"
            android:layout_height="32dp"
            android:layout_width="32dp"
            android:layout_gravity="center_vertical" />
        <EditText
            android:hint="@string/enter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blueFighterName"
            android:textSize="32sp"
            android:inputType="textCapSentences"
            android:layout_marginLeft="7dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:background="@drawable/main_buttons"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginTop="50dp" />
</LinearLayout>
